--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -1,4 +1,4 @@
-name: filetransfer ci/cd
+name: Deploy CERT
 
 on: 
   push:
@@ -25,14 +25,6 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           path: inventory
           ref: 'main'
-
-#          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
-#          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-#      - name: GH 
-#        run: |
-#           gh auth status
-
-
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -40,14 +32,13 @@ jobs:
           distribution: 'adopt'
       - name: Build snapshoot
         run: |
-          ls -l
           mvn -ntp -B clean verify -DskipITs=true
       - name: Unit Testing
         run: |
-          echo -e "ESTOY EN UNIT TESTING\n"
+          echo -e "UNIT TESTING\n"
       - name: Code Analysis
         run: |
-          echo -e "ESTOY EN CODE ANALYSIS\n"
+          echo -e "CODE ANALYSIS\n"
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -56,8 +47,6 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Publishing code
         run: |
-          echo -e "ESTOY EN CODEARTIFACT\n"
-          ls -l target/
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
           ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
           GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
@@ -89,17 +78,9 @@ jobs:
           git config --global user.email "corcobadopedro@gmail.com"
           git config --global user.name "corcobadopedro"
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
-          cat pom.xml
           git add pom.xml
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git push
-      #- name: Push changes
-      #  uses: ad-m/github-push-action@master
-      #  with:
-      #    github_token: ${{ secrets.GITHUB_TOKEN }}
-      #    branch: develop
-
-
       - name: Deploy CERT
         run: |
           echo -e "ESTOY EN DEPLOY CERT\n"
