--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -40,8 +40,7 @@ jobs:
           git remote set-branches origin "*"
           git fetch
           git checkout main
-          #git merge --no-ff release-${VERSION}-${timestamp} --allow-unrelated-histories
-          git merge --no-ff release-${VERSION}-${timestamp}
+          git merge --no-ff release-${VERSION}-${timestamp} --allow-unrelated-histories
           git branch -D release-${VERSION}-${timestamp}
           mvn -B clean verify
           git push origin main
