--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -20,6 +20,7 @@ jobs:
           distribution: 'adopt'
       - name: Update snapshoot
         run: |
+          git status
           timestamp=`date +"%s"`
 
           git config --global user.email "corcobadopedro@gmail.com"
@@ -27,6 +28,7 @@ jobs:
           git remote set-branches origin "*"
           git ls-remote --tags origin v${VERSION}
           git ls-remote --heads origin release-*
+          
           git checkout develop
 
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
@@ -39,6 +41,7 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
+          git remote set-branches origin "*"
           git fetch
           git checkout main
           git merge --no-ff release-${VERSION}-${timestamp}
