--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
             token: ${{ secrets.GH_TOKEN }}
+            ref: 'develop'
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -20,6 +21,8 @@ jobs:
           distribution: 'adopt'
       - name: Update snapshoot
         run: |
+          VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
+          NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1+1, $2, $3}'`
           timestamp=`date +"%s"`
 
           git config --global user.email "corcobadopedro@gmail.com"
@@ -27,11 +30,8 @@ jobs:
           git remote set-branches origin "*"
           git ls-remote --tags origin v${VERSION}
           git ls-remote --heads origin release-*
-          
-          git checkout develop
-
-          VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
-          NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1+1, $2, $3}'`
+       
+          git status
 
           git checkout -b release-${VERSION}-${timestamp} develop
           mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
