--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -32,6 +32,10 @@ jobs:
           git ls-remote --heads origin release-*
        
           git status
+          git remote set-branches origin "*"
+          git fetch
+          
+          
 
           git checkout -b release-${VERSION}-${timestamp} develop
           mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
@@ -40,8 +44,15 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
+          
+          git status
+          ls -ltr
           git remote set-branches origin "*"
           git fetch
+          git status
+          ls -ltr
+          
+          
           git checkout main
           git merge --no-ff release-${VERSION}-${timestamp}
           git branch -D release-${VERSION}-${timestamp}
