--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -30,13 +30,6 @@ jobs:
           git remote set-branches origin "*"
           git ls-remote --tags origin v${VERSION}
           git ls-remote --heads origin release-*
-       
-          git status
-          git remote set-branches origin "*"
-          git fetch
-          
-          
-
           git checkout -b release-${VERSION}-${timestamp} develop
           mvn -ntp versions:set -DnewVersion=${VERSION} -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating branch release-${VERSION}-${timestamp} with non-snapshot versions"
@@ -44,22 +37,19 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
-          
+          git push origin develop
           git status
-          ls -ltr
-          git remote set-branches origin "*"
+          #git remote set-branches origin "*"
+          git checkout main
           git fetch
           git status
-          ls -ltr
-          
-          
-          git checkout main
+          #git checkout main
           git merge --no-ff release-${VERSION}-${timestamp}
           git branch -D release-${VERSION}-${timestamp}
           mvn -B clean verify
           git push origin main
-          git checkout develop
-          git push origin develop
+          #git checkout develop
+          #git push origin develop
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
