--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
             token: ${{ secrets.GH_TOKEN }}
-            ref: 'develop'
+            fetch-depth: '1'
+            #ref: 'develop'
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
