--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -38,6 +38,8 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
+          git fetch origin main --depth 1
+          git branch -a
           git checkout -b main origin/main
           git merge --no-ff release-${VERSION}-${timestamp}
           git branch -D release-${VERSION}-${timestamp}
