--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
             token: ${{ secrets.GH_TOKEN }}
-            ref: 'develop'
+            ref: 'main'
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -21,6 +21,10 @@ jobs:
           distribution: 'adopt'
       - name: Update snapshoot
         run: |
+          git fetch origin develop --depth 1
+          git branch -a
+          git checkout -b develop origin/develop
+          
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
           NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1+1, $2, $3}'`
           timestamp=`date +"%s"`
@@ -38,9 +42,10 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
-          git fetch origin main --depth 1
+          #git fetch origin main --depth 1
           git branch -a
-          git checkout -b main origin/main
+          #git checkout -b main origin/main
+          git checkout main
           git merge --no-ff release-${VERSION}-${timestamp} --allow-unrelated-histories
           git branch -D release-${VERSION}-${timestamp}
           mvn -B clean verify
