--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -46,11 +46,12 @@ jobs:
           git branch -a -vv
           #git checkout -b main origin/main
           git checkout main
-          git merge --no-ff release-${VERSION}-${timestamp}
+          git fetch
+          #git merge --no-ff release-${VERSION}-${timestamp}
           #git merge --no-ff release-${VERSION}-${timestamp} --allow-unrelated-histories
           git branch -D release-${VERSION}-${timestamp}
-          mvn -B clean verify
-          git push origin main
+          #mvn -B clean verify
+          #git push origin main
           git checkout develop
           git push origin develop
       - name: Configure AWS credentials
