--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -14,6 +14,7 @@ jobs:
         with:
             token: ${{ secrets.GH_TOKEN }}
             ref: 'main'
+            fetch-depth: '0'
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -48,7 +49,7 @@ jobs:
           git checkout main
           git fetch
           #git merge --no-ff release-${VERSION}-${timestamp}
-          git merge --no-ff -s ours release-${VERSION}-${timestamp} --allow-unrelated-histories
+          git merge --no-ff release-${VERSION}-${timestamp} --allow-unrelated-histories
           git branch -D release-${VERSION}-${timestamp}
           mvn -B clean verify
           git push origin main
