--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -50,3 +50,39 @@ jobs:
           git push origin main
           git checkout develop
           git push origin develop
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: Publishing code
+        run: |
+          VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
+          ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
+          GROUPID=`grep -m 1 "<groupId>" pom.xml | sed 's/.*<groupId>//' | sed 's/<\/groupId>//' | sed 's/\./\//g'`
+          ARTIFACT="${ARTIFACTID}-${VERSION}-SNAPSHOT.zip"
+          NEW_VERSION=`echo ${VERSION} | awk -F "." '{printf "%s.%s.%s", $1, $2, $3+1}'`
+          
+          echo "------------------------------------------"
+          echo ${VERSION}
+          echo ${ARTIFACTID}
+          echo ${GROUPID}
+          echo ${ARTIFACT}
+          echo ${NEW_VERSION}
+          echo -e "------------------------------------------\n\n\n"
+          
+          #AWS_TOKEN=`aws codeartifact get-authorization-token --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --query authorizationToken --output text`
+          #AWS_REPOSITORY_URL=`aws codeartifact get-repository-endpoint --domain ${{ secrets.CODEARTIFACT_DOMAIN }} --repository ${{ secrets.CODEARTIFACT_REPOSITORY }} --format maven --output text` 
+          
+          echo "------------------------------------------"
+          #echo -e "\n\n${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT}\n\n"
+          #echo -e "pcm:${AWS_TOKEN}\n\n"
+          #echo -e "target/${ARTIFACT}\n\n"
+          echo "------------------------------------------"
+          
+          
+          #curl --request PUT ${AWS_REPOSITORY_URL}${GROUPID}/${ARTIFACTID}/${VERSION}/${ARTIFACT} \
+          #--user "pcm:${AWS_TOKEN}" --header "Content-Type: application/octet-stream" \
+          #--data-binary "@target/${ARTIFACT}"
+
