--- a/.github/workflows/deploy_pre.yml
+++ b/.github/workflows/deploy_pre.yml
@@ -9,6 +9,7 @@ jobs:
   deploy_PRE:
     runs-on: ubuntu-latest
     environment: PRE
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
         with:
