--- a/.github/workflows/deploy_pro.yml
+++ b/.github/workflows/deploy_pro.yml
@@ -9,6 +9,7 @@ jobs:
   deploy_PRO:
     runs-on: ubuntu-latest
     environment: PRO
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
         with:
