--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
             fetch-depth: 0
             token: ${{ secrets.GH_TOKEN }}
-            #ref: main
+            ref: main
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
