--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -42,22 +42,22 @@ jobs:
           mvn -ntp versions:set -DnewVersion=${NEW_VERSION}-SNAPSHOT -DgenerateBackupPoms=false
           git commit --allow-empty -am "chore: updating for ${NEW_VERSION}-SNAPSHOT develop [skip ci]"
           git merge --no-ff -m "Merge branch release-${VERSION}-${timestamp} into develop [skip ci]" -s ours release-${VERSION}-${timestamp}
-          git branch -a --contains main
+          #git branch -a --contains main
           git remote set-branches origin "*"
           git fetch
           git checkout main
-          echo -e "########################################## START ################################################\n\n\n"
-          echo -e "git log --graph --oneline --decorate --all\n"
-          git log --graph --oneline --decorate --all
-          echo -e "DIFF\n"
-          git diff
-          echo -e "DIFF --STANGED\n"
-          git diff --staged
-          echo -e "DIF pom.xml\n"
-          git diff pom.xml
-          echo -e "########################################### END #################################################\n\n\n"
+          #echo -e "########################################## START ################################################\n\n\n"
+          #echo -e "git log --graph --oneline --decorate --all\n"
+          #git log --graph --oneline --decorate --all
+          #echo -e "DIFF\n"
+          #git diff
+          #echo -e "DIFF --STANGED\n"
+          #git diff --staged
+          #echo -e "DIF pom.xml\n"
+          #git diff pom.xml
+          #echo -e "########################################### END #################################################\n\n\n"
           git merge release-${VERSION}-${timestamp} --no-ff
-          git merge release-${VERSION}-${timestamp} --no-ff --strategy-option theirs --allow-unrelated-histories
+          #git merge release-${VERSION}-${timestamp} --no-ff --strategy-option theirs --allow-unrelated-histories
           git branch -D release-${VERSION}-${timestamp}
           mvn -B clean verify
           git push origin main
