--- a/.github/workflows/is_release.yml
+++ b/.github/workflows/is_release.yml
@@ -14,7 +14,7 @@ jobs:
         with:
             fetch-depth: 0
             token: ${{ secrets.GH_TOKEN }}
-            ref: main
+            #ref: main
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -22,7 +22,7 @@ jobs:
           distribution: 'adopt'
       - name: Update snapshoot
         run: |
-          git fetch origin develop --depth 1
+          #git fetch origin develop --depth 1
           git checkout -b develop origin/develop
           
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//' | awk -F "." '{printf "%s.%s.%s", $1, $2, 0}'`
