--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -89,7 +89,7 @@ jobs:
       #- name: whitelist runner ip address
       #  run: |
       #    aws ec2 authorize-security-group-ingress \
-      #      --group-name $AWS_INSTANCE_SG_ID \
+      #      --group-name ${{ secrets.AWS_SG }} \
       #      --protocol tcp \
       #      --port 22 \
       #      --cidr ${{ steps.ip.outputs.ipv4 }}/32
@@ -102,7 +102,7 @@ jobs:
       #- name: revoke runner ip address
       #  run: |
       #    aws ec2 revoke-security-group-ingress \
-      #      --group-name $AWS_INSTANCE_SG_ID \
+      #      --group-name ${{ secrets.AWS_SG }} \
       #      --protocol tcp \
       #      --port 22 \
       #      --cidr ${{ steps.ip.outputs.ipv4 }}/32
