--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -39,6 +39,14 @@ jobs:
       - name: Code Analysis
         run: |
           echo -e "CODE ANALYSIS\n"
+      - name: Configure ssh keys
+        run: |
+          echo -e "Configure ssh keys\n"
+          mkdir -p ~/.ssh
+          cat ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
+          cat ${{ secrets.PUBLIC_KEY }} > ~/.ssh/id_rsa.pub
+          chmod 750 ~/.ssh
+          chmod 600 ~/.ssh/id_rsa
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
