--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -43,8 +43,8 @@ jobs:
         run: |
           echo -e "Configure ssh keys\n"
           mkdir -p ~/.ssh
-          cat ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
-          cat ${{ secrets.PUBLIC_KEY }} > ~/.ssh/id_rsa.pub
+          echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
+          echo ${{ secrets.PUBLIC_KEY }} > ~/.ssh/id_rsa.pub
           chmod 750 ~/.ssh
           chmod 600 ~/.ssh/id_rsa
       - name: Configure AWS credentials
