--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -42,11 +42,11 @@ jobs:
       - name: Configure ssh keys
         run: |
           echo -e "Configure ssh keys\n"
-          mkdir -p ~/.ssh
-          echo ${{ secrets.PRIVATE_KEY }} > ~/.ssh/id_rsa
-          echo ${{ secrets.PUBLIC_KEY }} > ~/.ssh/id_rsa.pub
-          chmod 750 ~/.ssh
-          chmod 600 ~/.ssh/id_rsa
+          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          host='ec2-35-85-168-158.us-west-2.compute.amazonaws.com'
+          hosts="$(dig +short "$host" | grep -v '\.$' | sed -z 's|\n|,|g')$host"
+          ssh-keyscan -H "$hosts" > ~/.ssh/known_hosts
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
