--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -46,7 +46,7 @@ jobs:
           known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
       - name: Configure known_hosts
         run: |
-          host='ec2-35-85-168-158.us-west-2.compute.amazonaws.com'
+          host='35.85.168.158'
           hosts="$(dig +short "$host" | grep -v '\.$' | sed -z 's|\n|,|g')$host"
           ssh-keyscan -H "$hosts" > ~/.ssh/known_hosts
       - name: Configure AWS credentials
