--- a/.github/workflows/deploy_cert.yml
+++ b/.github/workflows/deploy_cert.yml
@@ -51,6 +51,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Publishing code
+        id: pcode
         run: |
           VERSION=`grep "\-SNAPSHOT</version>" pom.xml | sed 's/.*<version>//' | sed 's/-SNAPSHOT<\/version>//'`
           ARTIFACTID=`grep -m 1 "<artifactId>" pom.xml | sed 's/.*<artifactId>//' | sed 's/<\/artifactId>//'`
@@ -105,11 +106,12 @@ jobs:
           echo -e "ESTOY EN DEPLOY CERT\n"
           ls -lR
           echo "------------------------------------------"
-          echo ${VERSION}
-          echo ${ARTIFACTID}
-          echo ${GROUPID}
-          echo ${ARTIFACT}
-          echo ${NEW_VERSION}
+          echo ${{ steps.pcode.outputs.VERSION }}
+          echo ${{ steps.pcode.outputs.ARTIFACTID }}
+          echo ${{ steps.pcode.outputs.GROUPID }}
+          echo ${{ steps.pcode.outputs.ARTIFACT }}
+          echo ${{ steps.pcode.outputs.VERSION }}
+          echo ${{ steps.pcode.outputs.NEW_VERSION }}
           echo -e "------------------------------------------\n\n\n"
 
       #    ansible-playbook --user ubuntu -i inventory/CERT/host ansible/deploy_filetransfer.yml -e "artifactId=${ARTIFACTID}" -e "version=${VERSION}" -e "target=CERT" -e "workspace=target"
